# lcov-to-cobertura-xml

./: .buildinfo  .gitchangelog-keepachangelog.tpl  .gitchangelog.rc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST  MANIFEST.in  Makefile  README  README.html  README.md  RELEASE  genindex.html  index.html  lcov-to-cobertura-xml.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: bandit.yml  ci.yml  release.yml  sphinx.yml
_modules/: index.html  lcov_cobertura.html
_modules/lcov_cobertura/: lcov_cobertura.html
_sources/api/: lcov_cobertura.lcov_cobertura.rst.txt  lcov_cobertura.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: lcov_cobertura.html  lcov_cobertura.lcov_cobertura.html  modules.html
doc/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst
lcov_cobertura/: __init__.py  lcov_cobertura.py
test/: mockrustfilt  test_lcov_cobertura.py
