[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["lcov_cobertura"]

[tool.coverage.paths]
source = ["lcov_cobertura"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 107
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | test
)/
'''
