[build-system]
requires = [
    "setuptools >= 42",  # At least v42 of setuptools required!
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test",]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"

[tool.coverage.run]
branch = true
source = ["lcov_cobertura"]
omit = [
    "test",
    ".tox",
]

[tool.coverage.paths]
source = ["lcov_cobertura"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 107
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | test
)/
'''
