[metadata]
name = lcov_cobertura
version = attr: setuptools_scm.get_version
description = LCOV to Cobertura XML converter
url = https://eriwen.github.io/lcov-to-cobertura-xml/
author = Eric Wendelin
author_email = me@eriwen.com
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
long_description = file: README.md
long_description_content_type = text/markdown
download_url = https://raw.githubusercontent.com/eriwen/lcov-to-cobertura-xml/master/lcov_cobertura/lcov_cobertura.py
license = Apache License, Version 2.0
license_expression = Apache-2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

keywords =
    lcov
    cobertura

[options]
python_requires = >=3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    importlib-metadata; python_version < '3.8'

packages =
    lcov_cobertura

[options.entry_points]
console_scripts =
    lcov_cobertura = lcov_cobertura.lcov_cobertura:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc

test =
    pytest
    xmldiff

cov =
    pytest-cov
    coverage[toml]

all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist
    test

max-line-length = 107
